--- a/index.html
+++ b/index.html
@@ -33,7 +33,44 @@
       <p>👋Hello, I am</p>
       <h1>Elisabeth Barmentlo</h1>
       <h2>Front-end developer based in Europe</h2>
-      <a href="#" class="btn btn-branding">Contact me</a>
+      <a href="#" class="btn btn-danger">Contact me</a>
+    </div>
+    <p class="text-center m-5">My projects</p>
+    <div class="project-description">
+      <div class="container">
+        <div class="row mb-5">
+          <div class="col d-none d-lg-block">
+            <img src="" class="img-fluid" alt="" />
+          </div>
+          <div class="col">
+            <h2 class="mb-5">Yoghurt project</h2>
+            <p class="mb-4">description</p>
+            <a href="" class="btn btn-outline-danger">view details</a>
+          </div>
+        </div>
+
+        <div class="row mb-5">
+          <div class="col">
+            <h2 class="mb-5">Weather project</h2>
+            <p class="mb-4">description</p>
+            <a href="" class="btn btn-outline-danger">view details</a>
+          </div>
+          <div class="col d-none d-lg-block">
+            <img src="" class="img-fluid" alt="" />
+          </div>
+        </div>
+
+        <div class="row mb-5">
+          <div class="col d-none d-lg-block">
+            <img src="" class="img-fluid" alt="" />
+          </div>
+          <div class="col">
+            <h2 class="mb-5">Dictionairy project</h2>
+            <p class="mb-4">description</p>
+            <a href="" class="btn btn-outline-danger">view details</a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
