added weather app

--- a/index.html
+++ b/index.html
@@ -52,11 +52,14 @@
         <div class="row mb-5">
           <div class="col">
             <h2 class="mb-5">Weather project</h2>
-            <p class="mb-4">description</p>
+            <p class="mb-4">
+              Weather app build by me where you can see the current weather and
+              the forecast of the next 5 days of any city in the world.
+            </p>
             <a href="" class="btn btn-outline-danger">view details</a>
           </div>
           <div class="col d-none d-lg-block">
-            <img src="" class="img-fluid" alt="" />
+            <img src="pictures/weatherapp.png" class="img-fluid" alt="" />
           </div>
         </div>
 
