--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <div class="container"></div>
+    <nav class="d-flex justify-content-between">
+      
+        <img src="pictures/Logo.jpg" class="logo" alt="" />
+        <ul>
+          <li class="active"></li>
+          <li>
+            <a href="/home.html">Home</a>
+            </li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/work.html">Work</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      
+    </nav>
+</div>
     <div class="hero">
       <p>👋Hello, I am</p>
       <h1>Elisabeth Barmentlo</h1>
