--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
   <body>
     <div class="container"></div>
     <nav class="d-flex justify-content-between">
-      <img src="pictures/Logo.jpg" class="logo" alt="" />
+      <img src="pictures/Logo.jpg" class="logo d-block" alt="" />
       <ul>
         <li class="active">
-        <li> <a href="/home.html"> Home</a></li>
+        <a href="/home.html"> Home</a></li>
         <li><a href="/about.html"> About</a></li>
         <li><a href="/work.html"> Work</a></li>
         <li><a href="/contact.html"> Contact</a></li>
