--- a/index.html
+++ b/index.html
@@ -29,18 +29,16 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <div class="container"></div>
-    <nav class="d-flex justify-content-between">
-      <img src="pictures/Logo.jpg" class="logo d-block" alt="" />
+    <div class="container nav d-flex justify-content-between">
+      <img src="pictures/Logo.jpg" alt="" class="logo" />
+
       <ul>
-        <li class="active">
-        <a href="/home.html"> Home</a></li>
-        <li><a href="/about.html"> About</a></li>
-        <li><a href="/work.html"> Work</a></li>
-        <li><a href="/contact.html"> Contact</a></li>
-        </li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+        <li><a href="/work.html">Work</a></li>
       </ul>
-    </nav>
+    </div>
 
     <div class="hero">
       <p>👋Hello, I am</p>
