--- a/index.html
+++ b/index.html
@@ -29,16 +29,32 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <div class="container nav d-flex justify-content-between">
-      <img src="pictures/Logo.jpg" alt="" class="logo" />
-
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about.html">About</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-        <li><a href="/work.html">Work</a></li>
-      </ul>
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+      <a class="navbar-brand" href="#"
+        ><img src="pictures/Logo.jpg" alt="" class="logo"
+      /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="/"
+            >Home <span class="sr-only">(current)</span></a
+          >
+          <a class="nav-item nav-link" href="/about.html">About</a>
+          <a class="nav-item nav-link" href="/work.html">Work</a>
+          <a class="nav-item nav-link" href="/contact.html">Contact</a>
+        </div>
+      </div>
+    </nav>
 
     <div class="hero">
       <p>👋Hello, I am</p>
