--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,35 @@
         <title>Portfolio</title>
       </head>
       <body>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
+          <a class="navbar-brand" href="#"
+            ><img src="pictures/Logo.jpg" alt="" class="logo"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link" href="/"
+                >Home <span class="sr-only">(current)</span></a
+              >
+              <a class="nav-item nav-link" href="/about.html">About</a>
+              <a class="nav-item nav-link" href="/work.html">Work</a>
+              <a class="nav-item nav-link active" href="/contact.html"
+                >Contact</a
+              >
+            </div>
+          </div>
+        </nav>
+
         <div class="content-container container">
           <div class="content">
             <h1>Let's get in touch</h1>
