--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
       <a class="navbar-brand" href="#"
         ><img src="pictures/Logo.jpg" alt="" class="logo"
       /></a>
