--- a/work.html
+++ b/work.html
@@ -88,6 +88,42 @@
             </div>
           </div>
         </div>
+
+        <div class="container">
+          <footer>
+            <div
+              class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+            >
+              <div>
+                <h4>Work inquiry</h4>
+                <p class="text-muted">Let's work together</p>
+              </div>
+              <div>
+                <a href="" class="btn btn-danger">Contact me</a>
+              </div>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+              <a href="mailto: ebarmentlo@hotmail.com" class="email-link"
+                >ebarmentlo@hotmail.com</a
+              >
+            </div>
+            <div class="social-link d-flex justify-content-center mb-5">
+              <a href="https://github.com/EBarmentlo" target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/in/elisabeth-barmentlo-1ba43259/"
+                target="_blank"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+              <a
+                href="https://www.instagram.com/elisabethbarmentlo/"
+                target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+            </div>
+          </footer>
+        </div>
       </body>
     </html>
 
