--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,500&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio</title>
+    <meta
+      name="description"
+      content="Elisabeth is a front-end developer based in Europe"
+    />
+    <title>Portfolio - Elisabeth Barmentlo</title>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
       <a class="navbar-brand" href="#"
-        ><img src="pictures/Logo.jpg" alt="" class="logo"
+        ><img src="pictures/Logo.jpg" alt="EB logo" class="logo"
       /></a>
       <button
         class="navbar-toggler"
@@ -46,12 +50,30 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="/"
+          <a
+            class="nav-item nav-link active"
+            href="/"
+            title="navigation homepage"
             >Home <span class="sr-only">(current)</span></a
           >
-          <a class="nav-item nav-link" href="/about.html">About</a>
-          <a class="nav-item nav-link" href="/work.html">Work</a>
-          <a class="nav-item nav-link" href="/contact.html">Contact</a>
+          <a
+            class="nav-item nav-link"
+            href="/about.html"
+            title="about page Elisabeth"
+            >About</a
+          >
+          <a
+            class="nav-item nav-link"
+            href="/work.html"
+            title="work page Elisabeth"
+            >Work</a
+          >
+          <a
+            class="nav-item nav-link"
+            href="/contact.html"
+            title="contact page Elisabeth"
+            >Contact</a
+          >
         </div>
       </div>
     </nav>
