--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
       <body>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
           <a class="navbar-brand" href="#"
-            ><img src="pictures/Logo.jpg" alt="" class="logo"
+            ><img src="pictures/Logo.jpg" alt="EB logo" class="logo"
           /></a>
           <button
             class="navbar-toggler"
@@ -52,12 +52,27 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="/"
+              <a class="nav-item nav-link" href="/" title="navigation homepage"
                 >Home <span class="sr-only">(current)</span></a
               >
-              <a class="nav-item nav-link" href="/about.html">About</a>
-              <a class="nav-item nav-link active" href="/work.html">Work</a>
-              <a class="nav-item nav-link" href="/contact.html">Contact</a>
+              <a
+                class="nav-item nav-link"
+                href="/about.html"
+                title="about page Elisabeth"
+                >About</a
+              >
+              <a
+                class="nav-item nav-link active"
+                href="/work.html"
+                title="work page Elisabeth"
+                >Work</a
+              >
+              <a
+                class="nav-item nav-link"
+                href="/contact.html"
+                title="contact page Elisabeth"
+                >Contact</a
+              >
             </div>
           </div>
         </nav>
