--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
       <a class="navbar-brand" href="#"
-        ><img src="pictures/Logo.jpg" alt="" class="logo"
+        ><img src="pictures/Logo.jpg" alt="EB logo" class="logo"
       /></a>
       <button
         class="navbar-toggler"
@@ -46,12 +46,27 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/"
+          <a class="nav-item nav-link" href="/" title="navigation homepage"
             >Home <span class="sr-only">(current)</span></a
           >
-          <a class="nav-item nav-link active" href="/about.html">About</a>
-          <a class="nav-item nav-link" href="/work.html">Work</a>
-          <a class="nav-item nav-link" href="/contact.html">Contact</a>
+          <a
+            class="nav-item nav-link active"
+            href="/about.html"
+            title="about page Elisabeth"
+            >About</a
+          >
+          <a
+            class="nav-item nav-link"
+            href="/work.html"
+            title="work page Elisabeth"
+            >Work</a
+          >
+          <a
+            class="nav-item nav-link"
+            href="/contact.html"
+            title="contact page Elisabeth"
+            >Contact</a
+          >
         </div>
       </div>
     </nav>
@@ -66,7 +81,7 @@
               Learned to code by doing the Shecodes course online. Passioned to
               show you my work.
             </p>
-            <a href="" class="btn btn-danger">Look at my projects</a>
+            <a href="/work.html" class="btn btn-danger">Look at my projects</a>
           </div>
         </div>
         <div class="col-lg-4 profile-pic">
