--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <p>👋Hello, I am</p>
       <h1>Elisabeth Barmentlo</h1>
       <h2>Front-end developer based in Europe</h2>
-      <a href="#" class="btn btn-danger">Contact me</a>
+      <a href="/contact.html" class="btn btn-danger">Contact me</a>
     </div>
     <p class="text-center m-5">My projects</p>
     <div class="project-description">
