--- a/index.html
+++ b/index.html
@@ -33,51 +33,60 @@
     <title>Portfolio - Elisabeth Barmentlo</title>
   </head>
   <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
-      <a class="navbar-brand" href="#"
-        ><img src="pictures/Logo.jpg" alt="EB logo" class="logo"
-      /></a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a
-            class="nav-item nav-link active"
-            href="/"
-            title="navigation homepage"
-            >Home <span class="sr-only">(current)</span></a
-          >
-          <a
-            class="nav-item nav-link"
-            href="/about.html"
-            title="about page Elisabeth"
-            >About</a
-          >
-          <a
-            class="nav-item nav-link"
-            href="/work.html"
-            title="work page Elisabeth"
-            >Work</a
-          >
-          <a
-            class="nav-item nav-link"
-            href="/contact.html"
-            title="contact page Elisabeth"
-            >Contact</a
-          >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="/">
+          <img
+            src="images/logo.png"
+            alt="Amina's logo"
+            class="logo rounded"
+            title="Homepage"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html" title="About Amina"
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/work.html" title="Amina's Work"
+                >Work</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html" title="Contact Amina"
+                >Contact</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
-
     <div class="hero">
       <p>👋Hello, I am</p>
       <h1>Elisabeth Barmentlo</h1>
