--- a/index.html
+++ b/index.html
@@ -42,39 +42,52 @@
           class="navbar-toggler"
           type="button"
           data-toggle="collapse"
-          data-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
           <div class="navbar-nav">
-            <a
-              class="nav-item nav-link active"
-              href="/"
-              title="navigation homepage"
-              >Home <span class="sr-only">(current)</span></a
-            >
-            <a
-              class="nav-item nav-link"
-              href="/about.html"
-              title="about page Elisabeth"
-              >About</a
-            >
-            <a
-              class="nav-item nav-link"
-              href="/work.html"
-              title="work page Elisabeth"
-              >Work</a
-            >
-            <a
-              class="nav-item nav-link"
-              href="/contact.html"
-              title="contact page Elisabeth"
-              >Contact</a
-            >
+            <ul class="navbar-nav mb2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-item nav-link active"
+                  href="/"
+                  title="navigation homepage"
+                  >Home <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-item nav-link"
+                  href="/about.html"
+                  title="about page Elisabeth"
+                  >About</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-item nav-link"
+                  href="/work.html"
+                  title="work page Elisabeth"
+                  >Work</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-item nav-link"
+                  href="/contact.html"
+                  title="contact page Elisabeth"
+                  >Contact</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
       </div>
