--- a/about.html
+++ b/about.html
@@ -30,47 +30,64 @@
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
-      <a class="navbar-brand" href="#"
-        ><img src="pictures/Logo.jpg" alt="EB logo" class="logo"
-      /></a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/" title="navigation homepage"
-            >Home <span class="sr-only">(current)</span></a
-          >
-          <a
-            class="nav-item nav-link active"
-            href="/about.html"
-            title="about page Elisabeth"
-            >About</a
-          >
-          <a
-            class="nav-item nav-link"
-            href="/work.html"
-            title="work page Elisabeth"
-            >Work</a
-          >
-          <a
-            class="nav-item nav-link"
-            href="/contact.html"
-            title="contact page Elisabeth"
-            >Contact</a
-          >
+      <div class="container">
+        <a class="navbar-brand" href="#"
+          ><img src="pictures/Logo.jpg" alt="EB logo" class="logo"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
+          <div class="navbar-nav">
+            <ul class="navbar-nav mb2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-item nav-link"
+                  href="/"
+                  title="navigation homepage"
+                  >Home <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-item nav-link active"
+                  href="/about.html"
+                  title="about page Elisabeth"
+                  >About</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-item nav-link"
+                  href="/work.html"
+                  title="work page Elisabeth"
+                  >Work</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-item nav-link"
+                  href="/contact.html"
+                  title="contact page Elisabeth"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </nav>
-
     <div class="content container">
       <div class="row">
         <div class="col-6">
