--- a/index.html
+++ b/index.html
@@ -104,12 +104,16 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col d-none d-lg-block">
-            <img src="" class="img-fluid" alt="" />
+            <img
+              src="pictures/yoghurt.jpg"
+              class="img-fluid"
+              alt="Yoghurt image"
+            />
           </div>
           <div class="col">
             <h2 class="mb-5">Yoghurt project</h2>
             <p class="mb-4">description</p>
-            <a href="" class="btn btn-outline-danger">view details</a>
+            <a href="/work.html" class="btn btn-outline-danger">view details</a>
           </div>
         </div>
 
@@ -120,21 +124,29 @@
               Weather app build by me where you can see the current weather and
               the forecast of the next 5 days of any city in the world.
             </p>
-            <a href="" class="btn btn-outline-danger">view details</a>
+            <a href="/work.html" class="btn btn-outline-danger">view details</a>
           </div>
           <div class="col d-none d-lg-block">
-            <img src="pictures/weatherapp.png" class="img-fluid" alt="" />
+            <img
+              src="pictures/weatherapp.png"
+              class="img-fluid"
+              alt="my weather project"
+            />
           </div>
         </div>
 
         <div class="row mb-5">
           <div class="col d-none d-lg-block">
-            <img src="" class="img-fluid" alt="" />
+            <img
+              src="pictures/dictionary.jpg"
+              class="img-fluid"
+              alt="Dictionary project"
+            />
           </div>
           <div class="col">
             <h2 class="mb-5">Dictionairy project</h2>
             <p class="mb-4">description</p>
-            <a href="" class="btn btn-outline-danger">view details</a>
+            <a href="/work.html" class="btn btn-outline-danger">view details</a>
           </div>
         </div>
       </div>
@@ -150,29 +162,51 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-danger">Contact me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-danger"
+              title="contact Elisabeth"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto: ebarmentlo@hotmail.com" class="email-link"
+          <a
+            href="mailto: ebarmentlo@hotmail.com"
+            class="email-link"
+            title="email Elisabeth"
             >ebarmentlo@hotmail.com</a
           >
         </div>
         <div class="social-link d-flex justify-content-center mb-5">
-          <a href="https://github.com/EBarmentlo" target="_blank"
+          <a
+            href="https://github.com/EBarmentlo"
+            target="_blank"
+            title="Github profile"
             ><i class="fab fa-github"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/elisabeth-barmentlo-1ba43259/"
             target="_blank"
+            title="linked-in profile"
             ><i class="fab fa-linkedin"></i
           ></a>
           <a
             href="https://www.instagram.com/elisabethbarmentlo/"
             target="_blank"
+            title="instagram profile"
             ><i class="fab fa-instagram"></i
           ></a>
         </div>
+        <p class="text-center mt-4">
+          This project is coded by Elisbeth Barmentlo, and it is
+          <a
+            href="https://github.com/EBarmentlo/Portfolio-project"
+            target="_blank"
+          >
+            open-sourced
+          </a>
+        </p>
       </footer>
     </div>
   </body>
