--- a/about.html
+++ b/about.html
@@ -26,12 +26,13 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,500&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio</title>
+    <meta name="description" content="About page of Elisabeth Barmentlo" />
+    <title>About Elisabeth - Elisabeth Barmentlo</title>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
       <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="/index.html"
           ><img src="pictures/Logo.jpg" alt="EB logo" class="logo"
         /></a>
         <button
@@ -102,7 +103,11 @@
           </div>
         </div>
         <div class="col-lg-4 profile-pic">
-          <img src="pictures/profile-picture.jpg" alt="" class="img-fluid" />
+          <img
+            src="pictures/profile-picture.jpg"
+            alt="profile picture"
+            class="img-fluid"
+          />
         </div>
       </div>
     </div>
@@ -117,29 +122,51 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-danger">Contact me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-danger"
+              title="contact Elisabeth"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto: ebarmentlo@hotmail.com" class="email-link"
+          <a
+            href="mailto: ebarmentlo@hotmail.com"
+            class="email-link"
+            title="email Elisabeth"
             >ebarmentlo@hotmail.com</a
           >
         </div>
         <div class="social-link d-flex justify-content-center mb-5">
-          <a href="https://github.com/EBarmentlo" target="_blank"
+          <a
+            href="https://github.com/EBarmentlo"
+            target="_blank"
+            title="Github profile"
             ><i class="fab fa-github"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/elisabeth-barmentlo-1ba43259/"
             target="_blank"
+            title="linked-in profile"
             ><i class="fab fa-linkedin"></i
           ></a>
           <a
             href="https://www.instagram.com/elisabethbarmentlo/"
             target="_blank"
+            title="instagram profile"
             ><i class="fab fa-instagram"></i
           ></a>
         </div>
+        <p class="text-center mt-4">
+          This project is coded by Elisbeth Barmentlo, and it is
+          <a
+            href="https://github.com/EBarmentlo/Portfolio-project"
+            target="_blank"
+          >
+            open-sourced
+          </a>
+        </p>
       </footer>
     </div>
   </body>
