--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
       <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="/"
           ><img src="pictures/Logo.jpg" alt="EB logo" class="logo"
         /></a>
         <button
