--- a/work.html
+++ b/work.html
@@ -32,12 +32,13 @@
           href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,500&family=Poppins:wght@500;700&display=swap"
           rel="stylesheet"
         />
-        <title>Portfolio</title>
+        <meta name="description" content="Work page of Elisabeth Barmentlo" />
+        <title>Work of Elisabeth - Elisabeth Barmentlo</title>
       </head>
       <body>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
           <div class="container">
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="/"
               ><img src="pictures/Logo.jpg" alt="EB logo" class="logo"
             /></a>
             <button
@@ -97,13 +98,13 @@
 
         <div class="content-container container">
           <div class="content">
-            <h1>Take a look at what I've been working on</h1>
+            <h1 class="mb-5">Take a look at what I've been working on</h1>
             <div class="row">
               <div class="col-md-6">
                 <img
                   src="pictures/weatherapp.png"
                   class="img-fluid mb-3"
-                  alt=""
+                  alt="Weather project"
                 />
                 <h3 class="text-center">Weather project</h3>
                 <p class="text-muted text-center">Built with HTML and CSS</p>
@@ -111,11 +112,21 @@
 
               <div class="col-md-6">
                 <img
-                  src="pictures/weatherapp.png"
+                  src="pictures/yoghurt.jpg"
                   class="img-fluid mb-3"
-                  alt=""
+                  alt="yoghurt project"
                 />
-                <h3 class="text-center">Weather project</h3>
+                <h3 class="text-center">Yoghurt project</h3>
+                <p class="text-muted text-center">Built with HTML and CSS</p>
+              </div>
+
+              <div class="col-md-6">
+                <img
+                  src="pictures/dictionary.jpg"
+                  class="img-fluid mb-3"
+                  alt="Dictionary project"
+                />
+                <h3 class="text-center">dictionary project</h3>
                 <p class="text-muted text-center">Built with HTML and CSS</p>
               </div>
             </div>
@@ -132,29 +143,51 @@
                 <p class="text-muted">Let's work together</p>
               </div>
               <div>
-                <a href="" class="btn btn-danger">Contact me</a>
+                <a
+                  href="/contact.html"
+                  class="btn btn-danger"
+                  title="contact Elisabeth"
+                  >Contact me</a
+                >
               </div>
             </div>
             <div class="d-flex justify-content-center mb-5">
-              <a href="mailto: ebarmentlo@hotmail.com" class="email-link"
+              <a
+                href="mailto: ebarmentlo@hotmail.com"
+                class="email-link"
+                title="email Elisabeth"
                 >ebarmentlo@hotmail.com</a
               >
             </div>
             <div class="social-link d-flex justify-content-center mb-5">
-              <a href="https://github.com/EBarmentlo" target="_blank"
+              <a
+                href="https://github.com/EBarmentlo"
+                target="_blank"
+                title="Github profile"
                 ><i class="fab fa-github"></i
               ></a>
               <a
                 href="https://www.linkedin.com/in/elisabeth-barmentlo-1ba43259/"
                 target="_blank"
+                title="linked-in profile"
                 ><i class="fab fa-linkedin"></i
               ></a>
               <a
                 href="https://www.instagram.com/elisabethbarmentlo/"
                 target="_blank"
+                title="instagram profile"
                 ><i class="fab fa-instagram"></i
               ></a>
             </div>
+            <p class="text-center mt-4">
+              This project is coded by Elisbeth Barmentlo, and it is
+              <a
+                href="https://github.com/EBarmentlo/Portfolio-project"
+                target="_blank"
+              >
+                open-sourced
+              </a>
+            </p>
           </footer>
         </div>
       </body>
